src/objects/Call_Note_Product__c.object
<CustomObject>
    <description>Junction object between Product and Activities</description>
    <fields>
        <fullName>Added_from_Invitees__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be set to true if the product is added to MFS Strategies through invitees section</description>
        <label>Added from Invitees?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Note__c</fullName>
        <inlineHelpText>Details which Call Note this Product was discussed in.</inlineHelpText>
        <label>Call Note</label>
        <referenceTo>Activity_Detail__c</referenceTo>
        <relationshipName>Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Discussion__c</fullName>
        <label>% Discussion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>High_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Call_Note_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MFS Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CNP-{0000}</displayFormat>
        <label>Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MFS Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>